// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupInstructions component if there are no students should render SetupInstructions 1`] = `
<div
  className="create-a-class-modal-content"
>
  <div
    className="create-a-class-modal-body modal-body setup-instructions"
  >
    <h3
      className="title"
    >
      Download student logins and setup instructions
    </h3>
    <p>
      This PDF includes usernames and passwords for each student and instructions for accessing their Quill accounts.
    </p>
    <a
      download={true}
      href="undefined/documents/setup_instructions_pdfs/class_code_links.pdf"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt=""
        src="undefined/images/illustrations/setup-instructions-generic.svg"
      />
    </a>
    <a
      className="quill-button secondary outlined medium"
      download={true}
      href="undefined/documents/setup_instructions_pdfs/class_code_links.pdf"
      target="_blank"
    >
      Download PDF
    </a>
  </div>
  <div
    className="create-a-class-modal-footer with-back-button"
  >
    <button
      className="quill-button secondary outlined medium"
      type="button"
    >
      Back
    </button>
    <button
      className="quill-button primary contained medium"
      onClick={[Function]}
      type="button"
    >
      Done
    </button>
  </div>
</div>
`;

exports[`SetupInstructions component if there are students should render SetupInstructions 1`] = `
<div
  className="create-a-class-modal-content"
>
  <div
    className="create-a-class-modal-body modal-body setup-instructions"
  >
    <h3
      className="title"
    >
      Download student logins and setup instructions
    </h3>
    <p>
      This PDF includes usernames and passwords for each student and instructions for accessing their Quill accounts.
    </p>
    <a
      download={false}
      href="/teachers/classrooms/285383/student_logins"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt=""
        src="undefined/images/illustrations/setup-instructions.svg"
      />
    </a>
    <a
      className="quill-button secondary outlined medium"
      download={false}
      href="/teachers/classrooms/285383/student_logins"
      target="_blank"
    >
      Download PDF
    </a>
  </div>
  <div
    className="create-a-class-modal-footer with-back-button"
  >
    <button
      className="quill-button secondary outlined medium"
      type="button"
    >
      Back
    </button>
    <button
      className="quill-button primary contained medium"
      onClick={[Function]}
      type="button"
    >
      Done
    </button>
  </div>
</div>
`;
